// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Container: Stores information about the containers being tracked.
ContainerTracking: Tracks the current location and status of containers.
Location: Represents locations where containers can be tracked.
Driver: Information about drivers handling the shipments.
Customer: Stores customer information.
Order: Stores order information related to a customer.
OrderProduct: Relationship between orders and products.
Product: Information about products being shipped.
Route: Stores information about the preferred container routes.
Shipment: Represents a shipment event for a container.
'''
}

Table Container {
    id INTEGER [primary key]
    container_number VARCHAR 
    description VARCHAR 
    weight INTEGER 
    origin VARCHAR 
    destination VARCHAR 
    shipment_date DATE 
    arrival_date DATE 
    }

Table ContainerTracking {
    id INTEGER [primary key]
    container_id INTEGER 
    current_location_id INTEGER 
    driver_id INTEGER 
    status VARCHAR 
    last_update DATETIME 
    }

Table Location {
    id INTEGER [primary key]
    name VARCHAR 
    address VARCHAR 
    country VARCHAR 
    latitude FLOAT 
    longitude FLOAT 
    }

Table Driver {
    id INTEGER [primary key]
    name VARCHAR 
    license_number VARCHAR 
    phone_number VARCHAR 
    }

Table Customer {
    id INTEGER [primary key]
    name VARCHAR 
    email VARCHAR 
    phone_number VARCHAR 
    }

Table Order {
    id INTEGER [primary key]
    customer_id INTEGER 
    order_date DATE 
    delivery_date DATE 
    status VARCHAR 
    }

Table OrderProduct {
    id INTEGER [primary key]
    order_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    }

Table Product {
    id INTEGER [primary key]
    name VARCHAR 
    description VARCHAR 
    weight INTEGER 
    price INTEGER 
    }

Table Route {
    id INTEGER [primary key]
    name VARCHAR 
    description VARCHAR 
    start_location_id INTEGER 
    end_location_id INTEGER 
    }

Table Shipment {
    id INTEGER [primary key]
    container_id INTEGER 
    location_id INTEGER 
    timestamp DATETIME 
    status VARCHAR 
    }



// Relationships
    Ref: ContainerTracking.(container_id) < Container.(id)
    Ref: ContainerTracking.(current_location_id) < Location.(id)
    Ref: ContainerTracking.(driver_id) < Driver.(id)
    Ref: Order.(customer_id) < Customer.(id)
    Ref: OrderProduct.(order_id) < Order.(id)
    Ref: OrderProduct.(product_id) < Product.(id)
    Ref: Route.(end_location_id) < Location.(id)
    Ref: Route.(start_location_id) < Location.(id)
    Ref: Shipment.(container_id) < Container.(id)
    Ref: Shipment.(location_id) < Location.(id)
